[package]
name = "flax"
version = "0.3.2"
edition = "2021"
authors = ["Tei Leelo Roberts <ten3roberts@gmail.com>"]
description = "An ergonomic archetypical ECS"
documentation = "https://docs.rs/flax"
repository = "https://github.com/ten3roberts/flax"
keywords = ["ecs", "hierarchy", "entity"]
categories = ["data-structures", "game-engines", "no-std"]
license = "MIT"

[workspace]
members = ["flax-derive", "asteroids"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flax-derive = { path = "./flax-derive", version = "0.3.0" }

flume = { version = "0.10.14", default_features = false, optional = true }


atomic_refcell = "0.1.8"
bitflags = "1.3.2"
eyre = "0.6.8"
itertools = "0.10.3"
paste = "1.0.7"
rayon = { version = "1.5.3", optional = true }
tokio = { version = "1.21", default_features = false, features = [
  "sync",
], optional = true }
smallvec = { version = "1.8.0", default_features = false }
tracing = { version = "0.1.35", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
erased-serde = { version = "0.3", features = [], optional = true }
once_cell = "1.16"
either = "1.8.0"
derivative = { version = "2.2", default_features = false, features = [
  "use_core",
] }

[dev-dependencies]
tokio = { version = "1.21", features = ["test-util", "macros"] }
futures = "0.3"
itertools = { version = "0.10.3", default_features = false }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
test-log = { version = "0.2.11", default_features = false, features = [
  "trace",
] }
serde_json = "1.0"
color-eyre = "0.6.2"
glam = { version = "0.21.3", features = ["rand", "serde"] }
rand = "0.8.5"
tracing-tree = "0.2"
bincode = "1.3.3"
ron = "0.8"
tracing = "0.1"
criterion = "0.4"
pretty_assertions = "1.3.0"

[profile.release]
debug = true

[profile.test]
debug = true

[features]
std = ["itertools/use_std", "itertools/use_alloc"]
default = ["std", "parallel", "flume"]
serde = ["dep:serde", "erased-serde"]
internal_assert = []
parallel = ["rayon"]

[[example]]
name = "guide"
required-features = ["std"]
path = "./examples/guide.rs"

[[example]]
name = "query"
required-features = ["std"]
path = "./examples/guide/query.rs"

[[example]]
name = "builder"
path = "./examples/guide/builder.rs"
required-features = ["std"]

[[example]]
name = "query_advanced"
path = "./examples/guide/query_advanced.rs"
required-features = ["std"]

[[example]]
name = "relations"
path = "./examples/guide/relations.rs"
required-features = ["std"]

[[example]]
name = "commandbuffer"
path = "./examples/guide/commandbuffer.rs"
required-features = ["std"]

[[example]]
name = "serialize"
path = "./examples/guide/serialize.rs"
required-features = ["std"]

[[example]]
name = "change_detection"
path = "./examples/guide/change_detection.rs"
required-features = ["std"]

[[example]]
name = "query_basic"
path = "./examples/query/basic.rs"
required-features = ["std"]


[[bench]]
name = "benchmarks"
harness = false
required-features = ["std"]
