[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flax = { path = "../", default-features = false, features = [ "flume", "derive", ] }
macroquad = "0.3.25"
# sapp-wasm = "=0.1.26"

flume = { version = "0.10.14", default_features = false }
rand = { version = "0.8.5", default_features = false, features = ["std_rng"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-tree = "0.2.3"
itertools = "0.10.5"
anyhow = "1.0.71"
