[package]
name = "asteroids"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flax = { path = "../", default-features = false, features = [ "flume", "derive", ] }
macroquad = "0.4.4"
# sapp-wasm = "=0.1.26"

flume = { version = "0.11.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tracing-tree = "0.2.5"
itertools = "0.11.0"
anyhow = "1.0.71"
