[package]
name = "flax-derive"
authors = ["Tei Leelo Roberts <ten3roberts@gmail.com>"]
version = "0.3.0"
description = "Derive macros for flax"
edition = "2021"
documentation = "https://docs.rs/flax"
repository = "https://github.com/ten3roberts/flax"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.43"
proc-macro-crate = "1.2"
syn = "1.0"
quote = "1.0"
itertools = "0.10"

[dev-dependencies]
glam = "0.21"
