[package]
name = "flax-derive"
authors = ["Tei Leelo Roberts <ten3roberts@gmail.com>"]
version = "0.5.0"
description = "Derive macros for flax"
edition = "2021"
documentation = "https://docs.rs/flax"
repository = "https://github.com/ten3roberts/flax"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.58"
proc-macro-crate = "1.3.1"
syn = "2.0.16"
quote = "1.0.27"
itertools = "0.10.5"

[dev-dependencies]
glam = "0.24.0"
pretty_assertions = "1.3.0"
