[package]
name = "flax-derive"
authors = ["Tei Leelo Roberts <ten3roberts@gmail.com>"]
version = "0.6.0"
description = "Derive macros for flax"
edition = "2021"
documentation = "https://docs.rs/flax"
repository = "https://github.com/ten3roberts/flax"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
proc-macro-crate = "2.0.0"
syn = "2.0.38"
quote = "1.0.33"
itertools = "0.11.0"

[dev-dependencies]
glam = "0.24.2"
pretty_assertions = "1.4.0"
